src/objects/operational_Calendar__c.object
<CustomObject>
    <description>used to host information on the ISS / ICH / ICCS calendars</description>
    <fields>
        <fullName>Advice_Day__c</fullName>
        <label>Advice Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent_Correction_Cut_Off__c</fullName>
        <description>Deadline for the agent to make corrections</description>
        <label>Agent Correction Cut-Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Airline_Billing_HOT__c</fullName>
        <label>Airline Billing &amp; HOT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Airline_Correction_Response_Cut_Off__c</fullName>
        <description>Deadline for the airlines to respond to the agents submitted corrections</description>
        <label>Airline Correction Response Cut-Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Airline_Input_Upload_Cut_Off__c</fullName>
        <description>Deadline for the airline to upload CASS billing to the agent</description>
        <label>Airline Input Upload Cut-Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSP_Settlement_Date__c</fullName>
        <description>Field to be used only for ICCS Recordtype</description>
        <label>BSP Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Availability__c</fullName>
        <description>Date of when the billing BSP/CASS is available to the agent to pay</description>
        <label>Billing Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Output_Generation__c</fullName>
        <label>Billing Output Generation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CASS_reports_Availability__c</fullName>
        <description>Date of CASS initial reports availability uploaded by the airlines</description>
        <label>CASS reports Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Day__c</fullName>
        <label>Call Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct relation with IATA ISO Country, used only for certain RTs</description>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Operational Calendars</relationshipLabel>
        <relationshipName>Operational_Calendars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EP_Settlement_date__c</fullName>
        <label>EP Settlement date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Call_Day__c</fullName>
        <label>Early Call Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Used to allow updates from external systems: Mulesoft + IRIS</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Day__c</fullName>
        <description>first day of the period</description>
        <label>Billing From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HAR_Day__c</fullName>
        <label>HAR Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICCS_Cycle_Start_Date__c</fullName>
        <description>Field to be used only for ICCS Recordtype</description>
        <label>ICCS Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICCS_Settlement_Date__c</fullName>
        <description>Field to be used only for ICCS Recordtype</description>
        <label>ICCS Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISS_operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISS Operation</label>
        <referenceTo>AMS_Settlement_System__c</referenceTo>
        <relationshipLabel>Operational Calendars</relationshipLabel>
        <relationshipName>Operational_Calendars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Day__c</fullName>
        <description>period last day</description>
        <label>Billing To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operation_Code__c</fullName>
        <description>IRIS operation code</description>
        <label>Operation Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Currency__c</fullName>
        <label>Operation Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Period_code__c</fullName>
        <description>IRIS combination of period and operation</description>
        <label>Operation + Period code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BSP International</fullName>
                </value>
                <value>
                    <fullName>BSP Domestic</fullName>
                </value>
                <value>
                    <fullName>CASS Export</fullName>
                </value>
                <value>
                    <fullName>CASS Import</fullName>
                </value>
                <value>
                    <fullName>SIS</fullName>
                </value>
                <value>
                    <fullName>BSP</fullName>
                </value>
                <value>
                    <fullName>CASS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Code__c</fullName>
        <description>IRIS period code</description>
        <label>Period Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protest_Deadline_ACH_Transactions__c</fullName>
        <label>Protest Deadline (ACH Transactions)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Protest_Deadline_IATA_Transactions__c</fullName>
        <label>Protest Deadline (IATA Transactions)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Protest_Deadline__c</fullName>
        <label>Protest Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rebill_Period__c</fullName>
        <description>To be used for CNS calendar and for Airlines only</description>
        <label>Rebill Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recap_Sheet_Submission_Deadline__c</fullName>
        <label>Recap Sheet Submission Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remittance_Day__c</fullName>
        <description>remittance date</description>
        <label>Remittance Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Day_ACH_Transactions__c</fullName>
        <label>Settlement Day (ACH Transactions)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Settlement_Day_Associated_Members__c</fullName>
        <label>Settlement Day (Associated Members)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Settlement_Day_IATA_Transactions__c</fullName>
        <label>Settlement Day (IATA Transactions)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Settlement_Day__c</fullName>
        <label>Settlement Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Sheet_Posting_Date_IATA_Tran__c</fullName>
        <label>Settlement Sheet Posting Date (IATA Tran</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Settlement_Sheet_Posting_Date__c</fullName>
        <description>Settlement Sheet Posting Date (ACH Transactions)</description>
        <label>Settlement Sheet Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submission_Deadline__c</fullName>
        <description>Submission Deadline For ICH/ACH Invoices</description>
        <label>Submission Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submission_Open__c</fullName>
        <label>Submission Open</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Supporting_Documents_Link_Deadline__c</fullName>
        <label>Supporting Documents Link Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Suspension_Day__c</fullName>
        <label>Suspension Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visible_on_the_portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to show/hide the record on the customer service portal. This field is unchecked by default</description>
        <label>Visible on the portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>frequency_code__c</fullName>
        <label>Remittance Frequency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Operational Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ISS_operation__c</columns>
        <columns>Operation_Code__c</columns>
        <columns>Period_Code__c</columns>
        <columns>Operation_Period_code__c</columns>
        <columns>First_Day__c</columns>
        <columns>Last_Day__c</columns>
        <columns>Remittance_Day__c</columns>
        <columns>Settlement_Day__c</columns>
        <columns>Operation_Currency__c</columns>
        <columns>frequency_code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ICCS</fullName>
        <columns>NAME</columns>
        <columns>Cycle__c</columns>
        <columns>Country__c</columns>
        <columns>Remittance_Day__c</columns>
        <columns>frequency_code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>operational_Calendar__c.ICCS_Calendar</value>
        </filters>
        <label>All ICCS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SIS</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>operational_Calendar__c.SIS_Calendar</value>
        </filters>
        <label>All SIS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Allrd</fullName>
        <columns>NAME</columns>
        <columns>ISS_operation__c</columns>
        <columns>Operation_Code__c</columns>
        <columns>Period_Code__c</columns>
        <columns>Operation_Period_code__c</columns>
        <columns>First_Day__c</columns>
        <columns>Last_Day__c</columns>
        <columns>Remittance_Day__c</columns>
        <columns>Settlement_Day__c</columns>
        <columns>Operation_Currency__c</columns>
        <columns>frequency_code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Remittance_Day__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All with remittance day</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>mgo</fullName>
        <columns>NAME</columns>
        <columns>ISS_operation__c</columns>
        <columns>Operation_Code__c</columns>
        <columns>Period_Code__c</columns>
        <columns>Operation_Period_code__c</columns>
        <columns>First_Day__c</columns>
        <columns>Last_Day__c</columns>
        <columns>Remittance_Day__c</columns>
        <columns>Settlement_Day__c</columns>
        <columns>Operation_Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ISS_operation__c</field>
            <operation>equals</operation>
            <value>BSP-IN</value>
        </filters>
        <label>. mgo</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Calendar-{00000000}</displayFormat>
        <label>FDS Calendar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational Calendars</pluralLabel>
    <recordTypes>
        <fullName>ICCS_Calendar</fullName>
        <active>true</active>
        <description>used to host ICCS Calendars</description>
        <label>ICCS Calendar</label>
    </recordTypes>
    <recordTypes>
        <fullName>ISS_Calendar</fullName>
        <active>true</active>
        <description>used to host ISS (BSP and CASS) Calendars</description>
        <label>ISS Calendar</label>
    </recordTypes>
    <recordTypes>
        <fullName>SIS_Calendar</fullName>
        <active>true</active>
        <description>used to host SIS Calendars</description>
        <label>SIS Calendar</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>